# kolona

./: .gitignore  LICENSE  README.md  makefile  requirements.in  requirements.txt  setup.cfg
.github/workflows/: tests.yml
examples/: main.py
kolona/: __init__.py  constants.py  exceptions.py  logger.py  task.py  workers.py
tests/: test_integration.py
