[metadata]
name = kolona
version = 0.2.0
description = A minimalistic in-memory async Python Task queue
long_description = file: README.md
long_description_content_type = text/markdown
keywords = queue, task queue, memory
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
url = https://github.com/roks0n/kolona/
author = roks0n
maintainer = roks0n

[options]
include_package_data = True
packages = kolona
python_requires = >=3.8

[options.packages.find]
where = kolona
include = pkg*
exclude =
    tests*

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[flake8]
max-line-length = 100
select = E,W,F,I,C
ignore = W503,E501,E203  # W503 is not PEP8 compliant and black doesnt always break lines well
application-import-names = kolona, tests

[isort]
line_length=100
indent=4
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
ensure_newline_before_comments=True
default_section=THIRDPARTY
use_parentheses=true
combine_star=true
balanced_wrapping=true
known_first_party=kolona
known_tests=tests
combine_as_imports=true
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,TESTS
